--- a/Exemplos/EF-Core-Base/Escolas.API/appsettings.json
+++ b/Exemplos/EF-Core-Base/Escolas.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Server=GABRIEL-NT;Database=DDDTalk.Escolas;User Id=sa;Password=Gabriel;",
+  "ConnectionString": "Server=.;Database=DDDTalk.Escolas;User Id=sa;Password=Password;",
   "Serilog": {
     "SeqServerUrl": "http://localhost:5341/",
     "MinimumLevel": {
