--- a/Exemplos/EF-Core-Base/Escolas.Infra.Dapper/Escolas.Infra.Dapper.csproj
+++ b/Exemplos/EF-Core-Base/Escolas.Infra.Dapper/Escolas.Infra.Dapper.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Dapper.FluentMap" Version="1.8.1" />
+    <PackageReference Include="Dapper.FluentMap.Dommel" Version="1.7.1" />
   </ItemGroup>
 
   <ItemGroup>
