Dapper repositorio turmas implementado

--- a/Exemplos/EF-Core-Base/Escolas.Infra.Dapper/Escolas.Infra.Dapper.csproj
+++ b/Exemplos/EF-Core-Base/Escolas.Infra.Dapper/Escolas.Infra.Dapper.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Escolas.Dominio\Escola.Dominio.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Queries\Turmas\" />
+  </ItemGroup>
+
 </Project>
