Adicionado adicionaraluno.sql

--- a/Exemplos/EF-Core-Base/Escolas.Infra.Dapper/Escolas.Infra.Dapper.csproj
+++ b/Exemplos/EF-Core-Base/Escolas.Infra.Dapper/Escolas.Infra.Dapper.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Queries\AdicionarAluno.sql" />
+    <Compile Include="Queries\Alunos\Adicionar.sql" />
   </ItemGroup>
 
   <ItemGroup>
